# MedDIP

./: CMakeLists.txt  README.md  abellRK_intrpl_order1.mhd
EdgeContour/: CMakeLists.txt  edgecontour_detect.h  main.cpp
FFT/: CMakeLists.txt  fourier_trans.cpp  fourier_trans.h
GT/: CMakeLists.txt  geo_trans.cpp  geo_trans.h  main.cpp
MHDIO/: CMakeLists.txt  mhd_io.cpp  mhd_io.h  mhd_reader.cpp  mhd_reader.h  mhd_writer.cpp  mhd_writer.h  utiles.cpp  utiles.h
MT/: CMakeLists.txt  main.cpp  morphology_trans.h
OT/: CMakeLists.txt  dct.cpp  discos_trans.cpp  fft.cpp  fourier_trans.cpp  main.cpp  ot_includes.h
PT/: CMakeLists.txt  main.cpp  point_trans.cpp  point_trans.h
Seg/: CMakeLists.txt  canny.cpp  canny.h  main.cpp  segmentation.h
TT/: CMakeLists.txt  main.cpp  template_trans.cpp  template_trans.h
