PROJECT(EdgeContourDetection)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_STANDARD 11)
SET(SOURCE_FILES edgecontour_detect.h main.cpp main.cpp)

INCLUDE_DIRECTORIES(../MHDIO)
INCLUDE_DIRECTORIES(../TT)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MHDIO TemplateTrans)
