PROJECT(MorphologyTrans)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_MACOSX_RPATH 0)

SET(CMAKE_CXX_STANDARD 11)

SET(SOURCE_FILES morphology_trans.h main.cpp)
INCLUDE_DIRECTORIES(../MHDIO)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES})
ADD_EXECUTABLE(MorphologyTransTest ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MHDIO)
TARGET_LINK_LIBRARIES(MorphologyTransTest MHDIO)
