PROJECT(PointTrans)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MACOSX_RPATH 0)
SET(CMAKE_CXX_STANDARD 11)

SET(SOURCE_FILES point_trans.h main.cpp)
INCLUDE_DIRECTORIES(../MHDIO)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES})
ADD_EXECUTABLE(PointTransTest ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MHDIO)
TARGET_LINK_LIBRARIES(PointTransTest MHDIO)
