PROJECT(Segmentation)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
set(CMAKE_MACOSX_RPATH 0)

SET(CMAKE_CXX_STANDARD 11)

SET(SOURCE_FILES segmentation.h main.cpp canny.cpp canny.h)
INCLUDE_DIRECTORIES(../MHDIO)
INCLUDE_DIRECTORIES(../EdgeContour)
INCLUDE_DIRECTORIES(../TT)
INCLUDE_DIRECTORIES(../PT)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
ADD_EXECUTABLE(SegmentationTest ${SOURCE_FILES})
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MHDIO PointTrans EdgeContourDetection)
TARGET_LINK_LIBRARIES(SegmentationTest MHDIO PointTrans EdgeContourDetection)
