PROJECT(TemplateTrans)
cmake_minimum_required(VERSION 2.8)
SET(CMAKE_CXX_STANDARD 11)
set(CMAKE_MACOSX_RPATH 0)

SET(SOURCE_FILES template_trans.h main.cpp ../Seg/segmentation.h)
INCLUDE_DIRECTORIES(../MHDIO)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES})
#ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MHDIO)
